--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -8,8 +8,8 @@
         Allow from all
     </Proxy>
 
-    ProxyPass / http://10.100.19.231:8080/
-    ProxyPassReverse / http://10.100.19.231:8080/
+    ProxyPass / http://l4-lb:8080/
+    ProxyPassReverse / http://l4-lb:8080/
     <Location />
         Order allow,deny
         Allow from all
