--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -8,8 +8,8 @@
         Allow from all
     </Proxy>
 
-    ProxyPass / http://10.100.36.150:8080/  # WAS clusterIP 주소
-    ProxyPassReverse / http://10.100.36.150:8080/ # WAS clusterIP 주소
+    ProxyPass / http://10.100.36.150:8080/
+    ProxyPassReverse / http://10.100.36.150:8080/
     <Location />
         Order allow,deny
         Allow from all
